# subdao-node

./: README.md
docker/: Dockerfile  docker-compose.yml
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  main.rs  rpc.rs  service.rs
pallets/pallet-crypto/: Cargo.toml
pallets/pallet-crypto/src/: lib.rs  mock.rs  tests.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
scripts/: Dockerfile  docker-compose.yml  insert_github_ocw_key.sh
