[package]
name = 'pallet-crypto'
authors = ['subdao-dev <https://github.com/SubDAO-Network>']
edition = '2018'
homepage = 'https://www.subdao.network/'
license = 'Apache 2.0'
repository = 'https://github.com/SubDAO-Network/subdao-node.git'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies]
frame-support = { default-features = false, version = '3.0.0' }
frame-system = { default-features = false, version = '3.0.0' }
serde = { version = "1.0.119" }
sp-core = { default-features = false, version = '3.0.0' }
sp-io = { default-features = false, version = '3.0.0' }
sp-runtime = { default-features = false, version = '3.0.0' }
sp-std = { default-features = false, version = '3.0.0' }


[features]
default = ['std']
std = [
    'codec/std',
    'serde/std',
    'sp-core/std',
    'sp-std/std',
    'frame-support/std',
    'frame-system/std',
    'sp-io/std',
    'sp-runtime/std',
]
